# Coinbase-Dashboard-Streamlit

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
dashboard/: Home.py  config.py
dashboard/api/: coinbase.py  live_updates.py
dashboard/components/: candlestick_plot.py  custom_card.py  line_plots.py
dashboard/models/: symbols.py  trading_accounts.py  trading_pairs.py
dashboard/pages/: 1_Historical_Prices.py  2_Accounts.py
dashboard/tests/: test_api.py  test_dashbaord.py  test_historical_prices.py
